# cobot_6dof_ros2

./: DEMO_VIDEO_SCRIPT.md  README.md  setup_cobot_env.sh
src/cobot_description/: CMakeLists.txt  package.xml  setup.py
src/cobot_description/cobot_description/: __init__.py  demo_motion.py  impedance_controller.py  teleop_node.py  vision_node.py
src/cobot_description/config/: cobot_controllers.yaml
src/cobot_description/launch/: demo_motion.launch.py  display.launch.py  full_system.launch.py
src/cobot_description/rviz/: cobot_view.rviz
src/cobot_description/urdf/: cobot.urdf.xacro  end_effector.xacro  materials.xacro
